# benchmarking-creativity

./: .gitignore  API_call_GPT4.py  API_call_o3.py  API_human.py  GPT4o_selections.csv  LLM_evaluation_data.ipynb  LLM_evaluations_tidy.py  README.md  api-call-games  api-call-games.py  api-test.ipynb  api_sample_code.ipynb  check-data.ipynb  data-combined.ipynb  data_combined.ipynb  decominoes.ipynb  evaluation_instructions_v2.txt  evaluation_instructions_with_shapes_v1.txt  evaluation_instructions_with_shapes_v2.txt  first-api-call.ipynb  first-api-call.py  instructions_v5.txt  move_validation.ipynb  openai_evaluations.jsonl  openai_evaluations_Mar9.jsonl  openai_generations.jsonl  openai_response.jsonl  openai_shape_evaluations.py  preference_alignment.ipynb  pyproject.toml  shapes.ipynb  structured-outputs.py
.ipynb_checkpoints/: first-api-call-checkpoint.ipynb  shapes-checkpoint.ipynb
API_calls/: API_GPT_LLM_generation.py  LLM_evaluations_tidy.py  evaluations_tidy.py  generation.py  reasoning_generation.py
analysis/: LLM_evaluation_data.ipynb  LLM_evaluations_Mar9.ipynb  gallery_selections_comparison.csv  gallery_selections_comparison_canonical.csv  human_data_analysis.ipynb  llm_gallery_saves.csv  openai_evaluations_Mar9.jsonl  openai_response.jsonl  shapes_moves_visualizations.ipynb
archive/: api-test.ipynb  api_sample_code.ipynb  data_combined.ipynb  first-api-call.ipynb
creative-foraging-human-data/: Readme.docx
data/: gallery_selections_comparison_canonical.csv
functions/: tools.py
instructions/: evaluation_instructions_v1.txt  evaluation_instructions_v2.txt  (+3 more)
(+101 files in other folders)
