[project]
name = "benchmarking-creativity"
version = "0.0.1"
description = "Comparing human vs AI behavior in a creative foraging game"
authors = [
    {name = "sarahhannahwu",email = "sarahhannahwu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
